update index file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index2.css">
 </head>
 <body>
-    <p>this  is  app  </p>
-    <button>submitt</button>
+    <p>this  is  app new </p>
+    <button>new submitt</button>
 </body>
 </html>
